# gny

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
debian/: changelog  control
dev/: check_version_consistency.py  console-mysql
gny/: auth.py  config.py  database.py  dns_utils.py  main.py  oidc_provider.py
gny/models/: __init__.py  _utils.py  enrollment.py  host.py  log.py  session.py  txt_record.py  user.py
gny/routes/: enroll.py  logs.py  oidc.py  txt.py  ui.py
gny/templates/: base.html  confirm_result.html  dashboard.html  login.html  logs.html  users.html
tests/: conftest.py  test_auth.py  test_config.py  test_dns_utils.py  test_host_model.py  test_main.py  test_oidc_provider.py  test_routes_enroll.py  test_routes_oidc.py  test_routes_txt.py
