[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gny"
version = "0.0.3"
description = "GNY server"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.3.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "dnspython>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "aiosqlite",
    "httpx",
]
lint = [
    "ruff",
    "mypy",
    "openapi-spec-validator",
]

[tool.setuptools.packages.find]
include = ["gny*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=gny --cov-report=term-missing"
